--- a/index.html
+++ b/index.html
@@ -1,29 +1,109 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-  <head>
-    <!-- Set the page title -->
-    <title>Assignment 02</title>
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Sunny Ridge Sanctuary</title>
+    <link rel="stylesheet" href="index.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+    <nav>
+            <img class="srlogo" src="SUNNYRIDGELOGO.png" alt="Logo for Sunny Ridge Sanctuary">
+        <ul>
+            <li><a href="#">Animal Control</a></li>
+            <li><a href="#">Ambassadors</a></li>
+            <li><a href="#">Wildlife Info</a></li>
+            <li><a href="#">Rehabilitation</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    </header>
+<main>
+    <div class="deer">
+        <img class="sizedeer" src="deer.png" alt="Deer in the winter woods">
+    </div>
+    <div class="squirrel">
+        <img class="sizesquirrel" src="squirrel.png" alt="Squirrel in the winter eating berry">
+    </div>
+    <div class="bunny">
+        <img class="sizebunny" src="bunny (2).png" alt="Bunny in the grass with a flower">
+    </div>
 
-    <!-- Set the charset we're using to UTF-8 -->
-    <meta charset="UTF-8" />
+    <div class="textmove">
+    <h1 class="infobox" >Sunny Ridge is a non-profit rehabilitation centre dedicated towards the <span style="color: #8FCB9B">care,<br>
+        rescue and preservation</span> of wildlife. We strive to provide a <span style="color: #8FCB9B">nurturing environment </span>,<br>
+        the <span style="color: #8FCB9B">best veterinary care</span> and give the <span style="color: #8FCB9B">best quality of life</span> towards all current <br>
+        residents of our centre.</h1>
+    </div>
 
-    <!-- Set the screens default zoom / scale to 1 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <div class="diamond">
+        <h1 class="diamondtext">February<br>Fundraiser</h1>
+    </div>
+    <div class="fundinfo">
+    <h2><span style="color:#5B9279">Support our cause!</span></h2>
+    <p class="fundtext">All proceeds go to<br>Sunny Ridge Sanctuary<br>to support and rescue wildlife.</p>
+    </div>
+    <div class="deselement"></div>
+    <div class="deselement2"></div>
+    <div class="circle">
+        <h1 class="circletext">Meet our<br>Educational<br>Ambassadors</h1>
+    </div>
     
-    <!-- Specifies the document mode for Internet Explorer -->
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <div class="popoutimages">
+        <img class="fox" src="fox.png" alt="Fox in the winter woods">
+        <img class="owl" src="owl.png" alt="Owl in the winter woods">
+        <img class="rabbit" src="rabbit.png" alt="Rabbit in the grass">
+        <img class="bird" src="bird.png" alt="Bird on a branch">
+    </div>
+    <div class="names">
+        <h2><span style="color:#5B9279">George</span></h2>
+        <p class="fundtext">Fox</p>
+        </div>
+    <div class="names2">
+            <h2><span style="color:#5B9279">Cruella</span></h2>
+            <p class="fundtext">Owl</p>
+        </div>
+        <div class="names3">
+            <h2><span style="color:#5B9279">Stella</span></h2>
+            <p class="fundtext">Rabbit</p>
+        </div>
+        <div class="names4">
+            <h2><span style="color:#5B9279">Josie</span></h2>
+            <p class="fundtext">Bird</p>
+            </div>
+        </main>
+    <footer>
+    
+        <nav>
+            <img class="srlogo" src="SUNNYRIDGELOGO.png" alt="Logo for Sunny Ridge Sanctuary">
+        <ul>
+            <li><a href="#">Animal Control</a></li>
+            <li><a href="#">Ambassadors</a></li>
+            <li><a href="#">Wildlife Info</a></li>
+            <li><a href="#">Rehabilitation</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <h1 class="footertext"><span style="color:white">Want to get<br>on news and events?<br>Subscribe by entering your email down below!</span></h1>
+    <form>
+        <h1><span style="color:#8FCB9B"></span></h1>
+        <p class="email">Enter email address:</p>
+        <input type="text" id="email" name="email">
+        <a href="subscription.html"><input type="submit" value="Subscribe!"></a>
+    </form>
+    <p1 class="copyright">Sunny Ridge Sanctuary © 2023</p1>
+</footer>
 
-    <!-- We are using a CSS Reset file to standardize browser default css -->
-    <link rel="stylesheet" href="reset.css" />
 
-    <!-- This is where all of our awesome CSS code goes -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!--
 
-      YOU HAVE TO MODIFY THE HTML TO BUILD YOUR AWESOME PAGE
 
-    -->
-  </body>
+
+
+</body>
+
 </html>
